# Jarvis-

./: .gitignore  BUILD.md  COMPLETE_IMPLEMENTATION_REPORT.txt  FINAL_IMPLEMENTATION_REPORT.txt  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  MODEL_DOWNLOAD.md  MODEL_DOWNLOAD_IMPLEMENTATION.md  README.md  gradlew  gradlew.bat  settings.gradle
.github/workflows/: build-apk.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: README.md
app/src/main/java/com/minijarvis/app/: MiniJarvisApplication.java
app/src/main/java/com/minijarvis/app/accessibility/: MiniJarvisAccessibilityService.java
app/src/main/java/com/minijarvis/app/llm/: LLMEngine.java  MockLLMEngine.java
app/src/main/java/com/minijarvis/app/model/: ActionModel.java  UIStructure.java
app/src/main/java/com/minijarvis/app/service/: FloatingButtonService.java  ModelDownloadService.java
app/src/main/java/com/minijarvis/app/ui/: MainActivity.java  ModelDownloadActivity.java
app/src/main/java/com/minijarvis/app/util/: ActionExecutor.java
app/src/main/jni/: CMakeLists.txt  minijarvis_jni.cpp
app/src/main/res/drawable/: floating_button_bg.xml  ic_jarvis.xml  ic_launcher_foreground.xml  stop_button_bg.xml
app/src/main/res/layout/: activity_main.xml  activity_model_download.xml  floating_button.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml  backup_rules.xml  data_extraction_rules.xml
